add lecture types

--- a/docs/_sources/week1/lecture.ipynb
+++ b/docs/_sources/week1/lecture.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f0ffaf96",
+   "id": "08a5d18c",
    "metadata": {},
    "source": [
-    "# Introduction Lecture\n",
+    "# Lecture: Course Introduction\n",
     "\n",
     "Jupyter Book also lets you write text-based notebooks using MyST Markdown.\n",
     "See [the Notebooks with MyST Markdown documentation](https://jupyterbook.org/file-types/myst-notebooks.html) for more detailed instructions.\n",
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e25acb39",
+   "id": "4c6da406",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab40d497",
+   "id": "7f91cbba",
    "metadata": {},
    "source": [
     "When your book is built, the contents of any `{code-cell}` blocks will be\n",
