--- a/docs/_sources/week1/tutorial2.ipynb
+++ b/docs/_sources/week1/tutorial2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to Python: Part 2\n",
+    "# Tutorial 2: Introduction to Python (ii)\n",
     "\n",
     "You can also create content with Jupyter Notebooks. This means that you can include\n",
     "code blocks and their outputs in your book.\n",
