--- a/docs/_sources/week2/lecture.ipynb
+++ b/docs/_sources/week2/lecture.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b8f4acc0",
+   "id": "f08ecfcc",
    "metadata": {},
    "source": [
-    "# Introduction to Data Analysis\n",
+    "# Lecture: Introduction to Data Analysis\n",
     "\n",
     "Jupyter Book also lets you write text-based notebooks using MyST Markdown.\n",
     "See [the Notebooks with MyST Markdown documentation](https://jupyterbook.org/file-types/myst-notebooks.html) for more detailed instructions.\n",
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2ed32018",
+   "id": "0410729e",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0ea563e",
+   "id": "248ef0a4",
    "metadata": {},
    "source": [
     "When your book is built, the contents of any `{code-cell}` blocks will be\n",
