--- a/docs/_sources/week3/lecture.ipynb
+++ b/docs/_sources/week3/lecture.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "87a3f459",
+   "id": "47f614fb",
    "metadata": {},
    "source": [
-    "# Introduction to Machine Learning\n",
+    "# Lecture: Introduction to Machine Learning\n",
     "\n",
     "Jupyter Book also lets you write text-based notebooks using MyST Markdown.\n",
     "See [the Notebooks with MyST Markdown documentation](https://jupyterbook.org/file-types/myst-notebooks.html) for more detailed instructions.\n",
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "db86787b",
+   "id": "ea33ee7f",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dc0b026",
+   "id": "26aa73c0",
    "metadata": {},
    "source": [
     "When your book is built, the contents of any `{code-cell}` blocks will be\n",
