--- a/docs/_sources/week6/lecture.ipynb
+++ b/docs/_sources/week6/lecture.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2530a6a0",
+   "id": "cfc7a98a",
    "metadata": {},
    "source": [
-    "# Social Media and Natural Language Processing (NLP)\n",
+    "# Lecture: Social Media and Natural Language Processing (NLP)\n",
     "\n",
     "Jupyter Book also lets you write text-based notebooks using MyST Markdown.\n",
     "See [the Notebooks with MyST Markdown documentation](https://jupyterbook.org/file-types/myst-notebooks.html) for more detailed instructions.\n",
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e3eb14ad",
+   "id": "eff315d1",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65353607",
+   "id": "889fa187",
    "metadata": {},
    "source": [
     "When your book is built, the contents of any `{code-cell}` blocks will be\n",
