--- a/docs/_sources/week7/lecture.ipynb
+++ b/docs/_sources/week7/lecture.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7f6ff214",
+   "id": "31ac8147",
    "metadata": {},
    "source": [
-    "# How to: visualisation\n",
+    "# Lecture: A guide to visualisation\n",
     "\n",
     "Jupyter Book also lets you write text-based notebooks using MyST Markdown.\n",
     "See [the Notebooks with MyST Markdown documentation](https://jupyterbook.org/file-types/myst-notebooks.html) for more detailed instructions.\n",
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4a5842cc",
+   "id": "c428d65c",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98f37dd0",
+   "id": "1dfb115b",
    "metadata": {},
    "source": [
     "When your book is built, the contents of any `{code-cell}` blocks will be\n",
