--- a/docs/_sources/week2/tutorial1.ipynb
+++ b/docs/_sources/week2/tutorial1.ipynb
@@ -4,39 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Exploration\n",
+    "# Tutorial 1: Data Exploration\n",
     "\n",
     "You can also create content with Jupyter Notebooks. This means that you can include\n",
     "code blocks and their outputs in your book.\n",
-    "\n",
-    "## Markdown + notebooks\n",
-    "\n",
-    "As it is markdown, you can embed images, HTML, etc into your posts!\n",
-    "\n",
-    "![](https://myst-parser.readthedocs.io/en/latest/_static/logo-wide.svg)\n",
-    "\n",
-    "You can also $add_{math}$ and\n",
-    "\n",
-    "$$\n",
-    "math^{blocks}\n",
-    "$$\n",
-    "\n",
-    "or\n",
-    "\n",
-    "$$\n",
-    "\\begin{aligned}\n",
-    "\\mbox{mean} la_{tex} \\\\ \\\\\n",
-    "math blocks\n",
-    "\\end{aligned}\n",
-    "$$\n",
-    "\n",
-    "But make sure you \\$Escape \\$your \\$dollar signs \\$you want to keep!\n",
-    "\n",
-    "## MyST markdown\n",
-    "\n",
-    "MyST markdown works in Jupyter Notebooks as well. For more information about MyST markdown, check\n",
-    "out [the MyST guide in Jupyter Book](https://jupyterbook.org/content/myst.html),\n",
-    "or see [the MyST markdown documentation](https://myst-parser.readthedocs.io/en/latest/).\n",
     "\n",
     "## Code blocks and outputs\n",
     "\n",
