--- a/docs/_sources/week5/lecture.ipynb
+++ b/docs/_sources/week5/lecture.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1318ccc5",
+   "id": "048aed96",
    "metadata": {},
    "source": [
-    "# Week 1: Exploring the future\n",
+    "# Lecture: Exploring the future\n",
     "\n",
     "Jupyter Book also lets you write text-based notebooks using MyST Markdown.\n",
     "See [the Notebooks with MyST Markdown documentation](https://jupyterbook.org/file-types/myst-notebooks.html) for more detailed instructions.\n",
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f6378a10",
+   "id": "0adf73eb",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21034a7d",
+   "id": "5528f14f",
    "metadata": {},
    "source": [
     "When your book is built, the contents of any `{code-cell}` blocks will be\n",
