--- a/docs/_sources/week7/tutorial1.ipynb
+++ b/docs/_sources/week7/tutorial1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualising your results\n",
+    "# Tutorial Visualising your results\n",
     "\n",
     "You can also create content with Jupyter Notebooks. This means that you can include\n",
     "code blocks and their outputs in your book.\n",
