--- a/docs/_sources/week4/lecture.ipynb
+++ b/docs/_sources/week4/lecture.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d39ccf39",
+   "id": "478bc9f4",
    "metadata": {},
    "source": [
-    "# Earth Observation & Google Earth Engine\n",
+    "# Lecture: Earth Observation & Google Earth Engine\n",
     "\n",
     "Jupyter Book also lets you write text-based notebooks using MyST Markdown.\n",
     "See [the Notebooks with MyST Markdown documentation](https://jupyterbook.org/file-types/myst-notebooks.html) for more detailed instructions.\n",
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b120682e",
+   "id": "177b3683",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e4ebae4",
+   "id": "3d4016ca",
    "metadata": {},
    "source": [
     "When your book is built, the contents of any `{code-cell}` blocks will be\n",
