--- a/docs/_sources/week4/tutorial2.ipynb
+++ b/docs/_sources/week4/tutorial2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Wildfire detection\n",
+    "# Tutorial 2: Wildfire detection\n",
     "\n",
     "You can also create content with Jupyter Notebooks. This means that you can include\n",
     "code blocks and their outputs in your book.\n",
