--- a/week1/tutorial1.ipynb
+++ b/week1/tutorial1.ipynb
@@ -6,9 +6,19 @@
    "source": [
     "# Tutorial 1: Introduction to Python (i)\n",
     "\n",
-    "This first tutorial will deal with the basics of Python and Jupyter Notebooks.   \n",
+    "Python is a programming language which allows us to give instructions to the computer. These instructions can be as simple as \"add together these two numbers\" or as complex as \"give me the average CO2 concentration for 2020\". For the former we will be able to complete the task using only a single instruction but for the latter, we may have to write a larger program containing hundreds or thousands of instructions.\n",
     "\n",
-    "\n"
+    "This course is going to start from the beginning, showing you to talk to the computer to perform simple tasks and as you become more confident and follow the later courses, you will find that you are able to write much more complex programmes.\n",
+    "\n",
+    "Python is a well-established language, with the current version (version 3) released in 2008 and it is installed by default on nearly all modern Linux systems. Python is also available for OS X and Windows.\n",
+    "\n",
+    "In this first tutorial we will deal with the basics of Python and Jupyter Notebooks.   \n",
+    "\n",
+    "```{admonition} Acknowledgements\n",
+    "This workbook is strongly based upon the work of others:\n",
+    "https://milliams.gitlab.io/beginning_python/\n",
+    "https://github.com/VU-IVM/Learning_Python \n",
+    "```"
    ]
   },
   {
