--- a/week1/tutorial1.ipynb
+++ b/week1/tutorial1.ipynb
@@ -73,7 +73,7 @@
     "\n",
     "Jupyter notebooks work with cells, each cell can be used to type either Python language or Markdown (text editing language). \n",
     "\n",
-    "### Shortcuts\n",
+    "**Shortcuts**\n",
     "- Shift + Enter run the current cell, select below\n",
     "- Ctrl/Cmd + Enter run selected cells\n",
     "- Ctrl/Cmd + S save and checkpoint\n",
