--- a/_sources/week1/tutorial1.ipynb
+++ b/_sources/week1/tutorial1.ipynb
@@ -65,7 +65,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Within this course, we assume no prior knowledge of Python. Experience with programming concepts or another programming language will help, but is not required to understand the material.\n",
+    "Within this course, we use Jupyter notebooks to execute all our python code. A Jupyter notebook is a document that can combine live programming code, text, images, and pretty displays of data all in the same place. This combination makes Jupyter notebooks clutch for exploring data as well as for learning and teaching.\n",
+    "\n",
+    "A Jupyter notebook has a special .ipynb file extension and can only be opened if you have the application JupyterLab or Jupyter Notebook installed and running. One of the cool things about Jupyter Book, which powers this online textbook, is that you can open a Jupyter notebook on the internet without any prior installation or configuration — using services like Google Colaboratory.\n",
+    "\n",
     "\n",
     "```{admonition} Jupyter notebooks\n",
     "\n",
