--- a/_sources/week1/tutorial1.ipynb
+++ b/_sources/week1/tutorial1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial 1: Introduction to Python (i)\n",
+    "# Tutorial 1: Introduction to Python\n",
     "\n",
     "Python is a programming language which allows us to give instructions to the computer. These instructions can be as simple as \"add together these two numbers\" or as complex as \"give me the average CO2 concentration for 2020\". For the former we will be able to complete the task using only a single instruction but for the latter, we may have to write a larger program containing hundreds or thousands of instructions.\n",
     "\n",
@@ -67,7 +67,7 @@
    "source": [
     "Within this course, we use Jupyter notebooks to execute all our python code. A Jupyter notebook is a document that can combine live programming code, text, images, and pretty displays of data all in the same place. This combination makes Jupyter notebooks clutch for exploring data as well as for learning and teaching.\n",
     "\n",
-    "A Jupyter notebook has a special .ipynb file extension and can only be opened if you have the application JupyterLab or Jupyter Notebook installed and running. One of the cool things about Jupyter Book, which powers this online textbook, is that you can open a Jupyter notebook on the internet without any prior installation or configuration — using services like Google Colaboratory.\n",
+    "A Jupyter notebook has a special .ipynb file extension and can only be opened if you have the application JupyterLab or Jupyter Notebook installed and running. One of the cool things about Jupyter Book, which powers this online textbook, is that you can open a Jupyter notebook on the internet without any prior installation or configuration — using services like Google Colaboratory (click on the rocket on the top of this page to open this page in Google Colaboratory).\n",
     "\n",
     "\n",
     "```{admonition} Jupyter notebooks\n",
