--- a/_sources/week1/tutorial2.ipynb
+++ b/_sources/week1/tutorial2.ipynb
@@ -109,7 +109,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../_static/images/numpy.png\" class=\"bg-primary\""
+    "```{image} ../_static/images/numpy.png\n",
+    ":class: bg-primary mb-1\n",
+    ":width: 200px\n",
+    ":align: center\n",
+    "```"
    ]
   },
   {
