--- a/_sources/week1/tutorial2.ipynb
+++ b/_sources/week1/tutorial2.ipynb
@@ -109,11 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{image} ../_static/images/numpy.png\n",
-    ":class: bg-primary mb-1\n",
-    ":width: 200px\n",
-    ":align: center\n",
-    "```"
+    "<img src=\"../_static/images/numpy.png\" class=\"bg-primary mb-1\">"
    ]
   },
   {
@@ -150,7 +146,7 @@
    "source": [
     "Arrays are \"n-dimensional\" data structures that can contain all the basic Python data types, e.g., floats, integers, strings etc, but work best with numeric data. NumPy arrays (\"ndarrays\") are homogenous, which means that items in the array should be of the same type. ndarrays are also compatible with numpy's vast collection of in-built functions!\n",
     "\n",
-    "![](img/chapter5/numpy_arrays.png)\n",
+    "<img src=\"../_static/images/numpy_arrays.png\" class=\"bg-primary mb-1\">\n",
     "\n",
     "Source: [Medium.com](https://medium.com/hackernoon/10-machine-learning-data-science-and-deep-learning-courses-for-programmers-7edc56078cde)"
    ]
@@ -1256,7 +1252,7 @@
     "\n",
     "Let's see an example. Say I sell pies on my weekends. I sell 3 types of pies at different prices, and I sold the following number of each pie last weekend. I want to know how much money I made per pie type per day.\n",
     "\n",
-    "![](img/chapter5/pies.png)"
+    "<img src=\"../_static/images/pies.png\" class=\"bg-primary mb-1\">"
    ]
   },
   {
@@ -1293,7 +1289,7 @@
    "source": [
     "How can we multiply these two arrays together? We could use a loop:\n",
     "\n",
-    "![](img/chapter5/pies_loop.png)"
+    "<img src=\"../_static/images/pies_loop.png\" class=\"bg-primary mb-1\">"
    ]
   },
   {
@@ -1326,7 +1322,7 @@
    "source": [
     "Or we could make them the same size, and multiply corresponding elements \"elementwise\":\n",
     "\n",
-    "![](img/chapter5/pies_broadcast.png)"
+    "<img src=\"../_static/images/pies_broadcast.png\" class=\"bg-primary mb-1\">"
    ]
   },
   {
@@ -1427,7 +1423,7 @@
    "source": [
     "In NumPy the smaller array is “broadcast” across the larger array so that they have compatible shapes:\n",
     "\n",
-    "![](img/chapter5/broadcasting.png)\n",
+    "<img src=\"../_static/images/broadcasting.png\" class=\"bg-primary mb-1\">\n",
     "\n",
     "Source: [Python Data Science Handbook](https://jakevdp.github.io/PythonDataScienceHandbook/) by Jake VanderPlas (2016)"
    ]
@@ -2415,7 +2411,8 @@
    "source": [
     "Numpy has many built-in functions for mathematical operations, really it has almost every numerical operation you might want to do in its library. I'm not going to explore the whole library here, but as an example of some of the available functions, consider working out the hypotenuse of a triangle that with sides 3m and 4m:\n",
     "\n",
-    "![](img/chapter5/triangle.png)"
+    "\n",
+    "<img src=\"../_static/images/triangle.png\" class=\"bg-primary mb-1\">"
    ]
   },
   {
@@ -2623,7 +2620,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](img/chapter7/pandas.png)"
+    "<img src=\"../_static/images/pandas.png\" class=\"bg-primary mb-1\">"
    ]
   },
   {
@@ -2672,7 +2669,7 @@
    "source": [
     "A Series is like a NumPy array but with labels. They are strictly 1-dimensional and can contain any data type (integers, strings, floats, objects, etc), including a mix of them. Series can be created from a scalar, a list, ndarray or dictionary using `pd.Series()` (**note the captial \"S\"**). Here are some example series:\n",
     "\n",
-    "![](img/chapter7/series.png)"
+    "<img src=\"../_static/images/series.png\" class=\"bg-primary mb-1\">"
    ]
   },
   {
@@ -3442,7 +3439,7 @@
    "source": [
     "As you can see above, indices that match will be operated on. Indices that don't match will appear in the product but with `NaN` values:\n",
     "\n",
-    "![](img/chapter7/series_addition.png)"
+    "<img src=\"../_static/images/series_addition.png\" class=\"bg-primary mb-1\">"
    ]
   },
   {
@@ -3904,7 +3901,7 @@
    "source": [
     "Pandas DataFrames are you're new best friend. They are like the Excel spreadsheets you may be used to. DataFrames are really just Series stuck together! Think of a DataFrame as a dictionary of series, with the \"keys\" being the column labels and the \"values\" being the series data:\n",
     "\n",
-    "![](img/chapter7/dataframe.png)"
+    "<img src=\"../_static/images/dataframe.png\" class=\"bg-primary mb-1\">\n"
    ]
   },
   {
