--- a/week1/tutorial2.ipynb
+++ b/week1/tutorial2.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Chapter Learning Objectives\n",
+    "## Learning Objectives\n",
     "<hr>"
    ]
   },
