deploy: c06166a66189b69faaaff23e655fe1dea461606c

--- a/_sources/week1/lecture.ipynb
+++ b/_sources/week1/lecture.ipynb
@@ -2,67 +2,36 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b47de79d",
+   "id": "d4ffa861",
    "metadata": {},
    "source": [
     "# Lecture: Course Introduction\n",
     "\n",
-    "Jupyter Book also lets you write text-based notebooks using MyST Markdown.\n",
-    "See [the Notebooks with MyST Markdown documentation](https://jupyterbook.org/file-types/myst-notebooks.html) for more detailed instructions.\n",
-    "This page shows off a notebook written in MyST Markdown.\n",
+    "This week we will kick-off the course. \n",
     "\n",
-    "## An example cell\n",
+    "`````{admonition} Learning objectives week 1\n",
+    ":class: important\n",
+    "- Understand the concept of Big Data and how it can be used in sustainability sciences\n",
+    "- Know how this course is structured \n",
+    "- Gain a basic understanding of Python and Jupyter Notebooks\n",
+    "`````\n",
     "\n",
-    "With MyST Markdown, you can define code cells with a directive like so:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "6a66c191",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(2 + 2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6b5f0702",
-   "metadata": {},
-   "source": [
-    "When your book is built, the contents of any `{code-cell}` blocks will be\n",
-    "executed with your default Jupyter kernel, and their outputs will be displayed\n",
-    "in-line with the rest of your content.\n",
+    "## Big data\n",
     "\n",
-    "```{seealso}\n",
-    "Jupyter Book uses [Jupytext](https://jupytext.readthedocs.io/en/latest/) to convert text-based files to notebooks, and can support [many other text-based notebook files](https://jupyterbook.org/file-types/jupytext.html).\n",
-    "```\n",
+    "`````{admonition} Definition of Big Data\n",
+    ":class: tip\n",
+    "Big data is a collection of massive and complex data sets and data volume that include the huge quantities of data, data management capabilities, social media analytics and real-time data. \n",
+    "`````\n",
     "\n",
-    "## Create a notebook with MyST Markdown\n",
+    "## Python\n",
+    "Python is a programming language which allows us to give instructions to the computer. These instructions can be as simple as \"add together these two numbers\" or as complex as \"give me the average CO2 concentration for 2020\". For the former we will be able to complete the task using only a single instruction but for the latter, we may have to write a larger program containing hundreds or thousands of instructions.\n",
     "\n",
-    "MyST Markdown notebooks are defined by two things:\n",
+    "This course is going to start from the beginning, showing you to talk to the computer to perform simple tasks and as you become more confident and follow the later courses, you will find that you are able to write much more complex programmes. Within this course, we assume no prior knowledge of Python. Experience with programming concepts or another programming language will help, but is not required to understand the material.\n",
     "\n",
-    "1. YAML metadata that is needed to understand if / how it should convert text files to notebooks (including information about the kernel needed).\n",
-    "   See the YAML at the top of this page for example.\n",
-    "2. The presence of `{code-cell}` directives, which will be executed with your book.\n",
+    "Python is a well-established language, with the current version (version 3) released in 2008 and it is installed by default on nearly all modern Linux systems. Python is also available for OS X and Windows.\n",
     "\n",
-    "That's all that is needed to get started!\n",
-    "\n",
-    "## Quickly add YAML metadata for MyST Notebooks\n",
-    "\n",
-    "If you have a markdown file and you'd like to quickly add YAML metadata to it, so that Jupyter Book will treat it as a MyST Markdown Notebook, run the following command:\n",
-    "\n",
-    "```\n",
-    "jupyter-book myst init path/to/markdownfile.md\n",
+    "```{tip} \n",
+    "You can find much more info about Python [here](https://docs.python.org/3/faq/general.html#what-is-python)\n",
     "```"
    ]
   }
@@ -96,9 +65,7 @@
    "version": "3.8.14"
   },
   "source_map": [
-   14,
-   26,
-   28
+   14
   ]
  },
  "nbformat": 4,
