--- a/_sources/week4/lecture.ipynb
+++ b/_sources/week4/lecture.ipynb
@@ -2,68 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "92634cbe",
+   "id": "1cdb950a",
    "metadata": {},
    "source": [
     "# Lecture: Earth Observation & Google Earth Engine\n",
     "\n",
-    "Jupyter Book also lets you write text-based notebooks using MyST Markdown.\n",
-    "See [the Notebooks with MyST Markdown documentation](https://jupyterbook.org/file-types/myst-notebooks.html) for more detailed instructions.\n",
-    "This page shows off a notebook written in MyST Markdown.\n",
+    "This week we will focus on what we can do with earth observation data and learn how to use the google earth engine to unleash the potential of earth observation data.\n",
     "\n",
-    "## An example cell\n",
+    "`````{admonition} Learning objectives week 4\n",
+    ":class: important\n",
+    "- Gain a basic understanding of the Google Earth Engine.\n",
+    "- Understand and know how you can use the Google Earth engine in Python. \n",
+    "`````\n",
     "\n",
-    "With MyST Markdown, you can define code cells with a directive like so:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "35571fd6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(2 + 2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d9b540be",
-   "metadata": {},
-   "source": [
-    "When your book is built, the contents of any `{code-cell}` blocks will be\n",
-    "executed with your default Jupyter kernel, and their outputs will be displayed\n",
-    "in-line with the rest of your content.\n",
+    "## Google Earth Engine\n",
+    "Google Earth Engine is a cloud-based platform for planetary-scale geospatial analysis that brings Google's computational capabilities to bear on a variety of high-impact societal issues including deforestation, drought, disaster, disease, food security, water management, climate monitoring and environmental protection. \n",
     "\n",
-    "```{seealso}\n",
-    "Jupyter Book uses [Jupytext](https://jupytext.readthedocs.io/en/latest/) to convert text-based files to notebooks, and can support [many other text-based notebook files](https://jupyterbook.org/file-types/jupytext.html).\n",
-    "```\n",
+    "The Google Earth Engine consists of a multi-petabyte analysis-ready data catalog co-located with a high-performance, intrinsically parallel computation service. It is accessed and controlled through an Internet-accessible application programming interface (API) and an associated web-based interactive development environment (IDE) that enables rapid prototyping and visualization of results.\n",
     "\n",
-    "## Create a notebook with MyST Markdown\n",
+    "The data catalog houses a large repository of publicly available geospatial datasets, including observations from a variety of satellite and aerial imaging systems in both optical and non-optical wavelengths, environmental variables, weather and climate forecasts and hindcasts, land cover, topographic and socio-economic datasets. All of this data is preprocessed to a ready-to-use but information-preserving form that allows efficient access and removes many barriers associated with data management.\n",
     "\n",
-    "MyST Markdown notebooks are defined by two things:\n",
-    "\n",
-    "1. YAML metadata that is needed to understand if / how it should convert text files to notebooks (including information about the kernel needed).\n",
-    "   See the YAML at the top of this page for example.\n",
-    "2. The presence of `{code-cell}` directives, which will be executed with your book.\n",
-    "\n",
-    "That's all that is needed to get started!\n",
-    "\n",
-    "## Quickly add YAML metadata for MyST Notebooks\n",
-    "\n",
-    "If you have a markdown file and you'd like to quickly add YAML metadata to it, so that Jupyter Book will treat it as a MyST Markdown Notebook, run the following command:\n",
-    "\n",
-    "```\n",
-    "jupyter-book myst init path/to/markdownfile.md\n",
-    "```"
+    "Users can access and analyze data from the public catalog as well as their own private data using a library of operators provided by the Earth Engine API. These operators are implemented in a large parallel processing system that automatically subdivides and distributes computations, providing high-throughput analysis capabilities. Users access the API either through a thin client library or through a web-based interactive development environment built on top of that client library."
    ]
   }
  ],
@@ -96,9 +55,7 @@
    "version": "3.8.14"
   },
   "source_map": [
-   14,
-   26,
-   28
+   14
   ]
  },
  "nbformat": 4,
