--- a/_sources/week5/lecture.ipynb
+++ b/_sources/week5/lecture.ipynb
@@ -2,68 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e3321588",
+   "id": "15f98d4d",
    "metadata": {},
    "source": [
     "# Lecture: Exploring the future\n",
     "\n",
-    "Jupyter Book also lets you write text-based notebooks using MyST Markdown.\n",
-    "See [the Notebooks with MyST Markdown documentation](https://jupyterbook.org/file-types/myst-notebooks.html) for more detailed instructions.\n",
-    "This page shows off a notebook written in MyST Markdown.\n",
+    "This week we will focus on how we can use the various techniques we have learned over the past couple of weeks (e.g. data analysis and machine learning) to explore how the future may change.\n",
     "\n",
-    "## An example cell\n",
-    "\n",
-    "With MyST Markdown, you can define code cells with a directive like so:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "5e9a0e93",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(2 + 2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9f5a3794",
-   "metadata": {},
-   "source": [
-    "When your book is built, the contents of any `{code-cell}` blocks will be\n",
-    "executed with your default Jupyter kernel, and their outputs will be displayed\n",
-    "in-line with the rest of your content.\n",
-    "\n",
-    "```{seealso}\n",
-    "Jupyter Book uses [Jupytext](https://jupytext.readthedocs.io/en/latest/) to convert text-based files to notebooks, and can support [many other text-based notebook files](https://jupyterbook.org/file-types/jupytext.html).\n",
-    "```\n",
-    "\n",
-    "## Create a notebook with MyST Markdown\n",
-    "\n",
-    "MyST Markdown notebooks are defined by two things:\n",
-    "\n",
-    "1. YAML metadata that is needed to understand if / how it should convert text files to notebooks (including information about the kernel needed).\n",
-    "   See the YAML at the top of this page for example.\n",
-    "2. The presence of `{code-cell}` directives, which will be executed with your book.\n",
-    "\n",
-    "That's all that is needed to get started!\n",
-    "\n",
-    "## Quickly add YAML metadata for MyST Notebooks\n",
-    "\n",
-    "If you have a markdown file and you'd like to quickly add YAML metadata to it, so that Jupyter Book will treat it as a MyST Markdown Notebook, run the following command:\n",
-    "\n",
-    "```\n",
-    "jupyter-book myst init path/to/markdownfile.md\n",
-    "```"
+    "`````{admonition} Learning objectives week 5\n",
+    ":class: important\n",
+    "- Understand the different drivers of future changes.\n",
+    "- Gain a basic understanding of climate forecasting.\n",
+    "- know how to translate future socioeconomic scenarios into spatially-explicit future changes of land-use\n",
+    "`````"
    ]
   }
  ],
@@ -96,9 +47,7 @@
    "version": "3.8.14"
   },
   "source_map": [
-   14,
-   26,
-   28
+   14
   ]
  },
  "nbformat": 4,
