deploy: b8a3e14f30b3549373eac2431825806a4acd9a5b

--- a/_sources/week1/lecture.ipynb
+++ b/_sources/week1/lecture.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "48765e4d",
+   "id": "82ec5226",
    "metadata": {},
    "source": [
     "# Lecture: Course Introduction\n",
@@ -30,7 +30,7 @@
     "\n",
     "Python is a well-established language, with the current version (version 3) released in 2008 and it is installed by default on nearly all modern Linux systems. Python is also available for OS X and Windows.\n",
     "\n",
-    "```{tip} \n",
+    "```{seealso} \n",
     "You can find much more info about Python [here](https://docs.python.org/3/faq/general.html#what-is-python)\n",
     "```"
    ]
