add some more explanation

--- a/week1/tutorial1.ipynb
+++ b/week1/tutorial1.ipynb
@@ -70,7 +70,7 @@
     "A Jupyter notebook has a special .ipynb file extension and can only be opened if you have the application JupyterLab or Jupyter Notebook installed and running. One of the cool things about Jupyter Book, which powers this online textbook, is that you can open a Jupyter notebook on the internet without any prior installation or configuration — using services like Google Colaboratory (click on the rocket on the top of this page to open this page in Google Colaboratory).\n",
     "\n",
     "\n",
-    "```{admonition} Jupyter notebooks\n",
+    "```{tip} Jupyter notebooks\n",
     "\n",
     "Jupyter notebooks combine the ability to make nice documentation in combination with python code, which is perfect for our needs in these tutorials and practicums.\n",
     "\n",
