deploy: 1779b81ec0bcb1c0166cb2b4ffb732f9496afb36

--- a/_sources/week3/lecture.ipynb
+++ b/_sources/week3/lecture.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "219980e6",
+   "id": "d7da2aae",
    "metadata": {},
    "source": [
     "# Lecture: Introduction to Machine Learning\n",
@@ -12,6 +12,7 @@
     "`````{admonition} Learning objectives week 3\n",
     ":class: important\n",
     "- Gain a basic understanding of machine learning and its most important concepts.\n",
+    "- Understand the difference between supervised and unsupervised learning.\n",
     "- Understand and know how you can apply a machine learning model in Python. \n",
     "- Know how to validate and interpret your results.\n",
     "`````\n",
