add some more explanation

--- a/week1/tutorial1.ipynb
+++ b/week1/tutorial1.ipynb
@@ -15,8 +15,7 @@
     "In this first tutorial we will deal with the basics of Python and Jupyter Notebooks.   \n",
     "\n",
     "```{admonition} Acknowledgements\n",
-    "This workbook is strongly based upon the work of others:\n",
-    "https://www.tomasbeuzen.com/python-programming-for-data-science/ \n",
+    "This workbook is strongly based upon the work of [others](https://www.tomasbeuzen.com/python-programming-for-data-science/) \n",
     "```"
    ]
   },
