--- a/week1/tutorial2.ipynb
+++ b/week1/tutorial2.ipynb
@@ -9,8 +9,7 @@
     "One of the most used packages within our discipline are NumPy and Pandas. This tutorial will focus on teaching you the basics of both of them.\n",
     "\n",
     "```{admonition} Acknowledgements\n",
-    "This workbook is strongly based upon the work of others:\n",
-    "https://www.tomasbeuzen.com/python-programming-for-data-science/ \n",
+    "This workbook is strongly based upon the work of [others](https://www.tomasbeuzen.com/python-programming-for-data-science/) \n",
     "```\n",
     "\n"
    ]
