deploy: 3b9267d9c7f0f25ffdc21a02301d97293fcf3c03

--- a/_sources/week6/lecture.ipynb
+++ b/_sources/week6/lecture.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0c7f78f6",
+   "id": "f196929a",
    "metadata": {},
    "source": [
     "# Lecture: Social Media and Natural Language Processing (NLP)\n",
@@ -58,7 +58,7 @@
     "\n",
     "Below is a parse tree for the sentence “The thief robbed the apartment.” Included is a description of the three different information types conveyed by the sentence.\n",
     "\n",
-    "|<img src=\"https://builtin.com/sites/www.builtin.com/files/styles/ckeditor_optimize/public/inline-images/national/speech-nlp.jpg\">\n",
+    "<img src=\"https://builtin.com/sites/www.builtin.com/files/styles/ckeditor_optimize/public/inline-images/national/speech-nlp.jpg\">\n",
     "\n",
     "\n",
     "The letters directly above the single words show the parts of speech for each word (noun, verb and determiner). One level higher is some hierarchical grouping of words into phrases. For example, “the thief” is a noun phrase, “robbed the apartment” is a verb phrase and when put together the two phrases form a sentence, which is marked one level higher.\n",
@@ -98,9 +98,9 @@
     "\n",
     "For example:\n",
     "\n",
-    "Before NER: Martin bought 300 shares of SAP in 2016.\n",
+    "Before NER: *Martin bought 300 shares of SAP in 2016.*\n",
     "\n",
-    "After NER: [Martin]Person bought 300 shares of [SAP]Organization in [2016]Time.\n",
+    "After NER: *[Martin]Person bought 300 shares of [SAP]Organization in [2016]Time.*\n",
     "\n",
     " \n",
     "**Relationship Extraction**\n",
@@ -115,7 +115,7 @@
     "With the use of sentiment analysis, for example, we may want to predict a customer’s opinion and attitude about a product based on a review they wrote. Sentiment analysis is widely applied to reviews, surveys, documents and much more.\n",
     "\n",
     "```{admonition} Acknowledgements\n",
-    "This explananation is strongly based upon the work of [others](https://builtin.com/data-science/introduction-nl/) \n",
+    "This explananation is strongly based upon the work of [others](https://builtin.com/data-science/introduction-nlp/) \n",
     "```\n",
     "\n",
     "## Social Media data"
