deploy: 301cc149245eba599fffc5f2d0503298e301c5ce

--- a/_sources/week7/lecture.ipynb
+++ b/_sources/week7/lecture.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "80c7a8ed",
+   "id": "e490c589",
    "metadata": {},
    "source": [
     "# Lecture: A guide to visualisation\n",
     "\n",
-    "This week we will focus on data visualisation.\n",
+    "This week we will focus on data visualisation. Data visualization is a graphical representation of data or information—for example, taking raw numbers from a spreadsheet and transforming that into a bar or line chart. Using data visualizations helps you to easily understand and analyze trends and outcomes within your data.\n",
     "\n",
-    "`````{admonition}\n",
-    ":class: warning\n",
+    "Selecting the right graphical representation depends on the story you are trying to tell. You can choose any visualization and assume it’ll do the trick, but it’s worth the time and effort to select and customize the right visualization for long-lasting impact.\n",
+    "\n",
+    "`````{warning}\n",
     "This week is not exam material and is optional. \n",
     "`````\n",
     "\n",
