--- a/_sources/week1/tutorial2.ipynb
+++ b/_sources/week1/tutorial2.ipynb
@@ -9,7 +9,7 @@
     "One of the most used packages within our discipline are NumPy and Pandas. This tutorial will focus on teaching you the basics of both of them.\n",
     "\n",
     "```{admonition} Acknowledgements\n",
-    "This workbook is strongly based upon the work of [others](https://www.tomasbeuzen.com/python-programming-for-data-science/) \n",
+    "This tutorial is heavily based upon the work of [others](https://www.tomasbeuzen.com/python-programming-for-data-science/) \n",
     "```\n",
     "\n"
    ]
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Learning Objectives\n",
+    "##  Learning Objectives\n",
     "<hr>"
    ]
   },
