--- a/week1/tutorial1.ipynb
+++ b/week1/tutorial1.ipynb
@@ -3497,7 +3497,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 ('py310')",
    "language": "python",
    "name": "python3"
   },
@@ -3511,7 +3511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.10.6"
   },
   "toc": {
    "base_numbering": 1,
@@ -3529,7 +3529,12 @@
   "toc-autonumbering": false,
   "toc-showcode": false,
   "toc-showmarkdowntxt": false,
-  "toc-showtags": false
+  "toc-showtags": false,
+  "vscode": {
+   "interpreter": {
+    "hash": "9aa67eedecbb1544f55b95cced32a93bf08cf46b6b214074d43890cbd05ea300"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
