--- a/week4/tutorial2.ipynb
+++ b/week4/tutorial2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial 2: Wildfire detection\n",
+    "# Tutorial 2: Flood Risk Assessment\n",
     "\n",
     "You can also create content with Jupyter Notebooks. This means that you can include\n",
     "code blocks and their outputs in your book.\n",
@@ -64,7 +64,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.8 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -78,7 +78,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f323064ae63d54ed8d769390a968e914fbf7abacffc63e116cd2e04a08ed2d24"
+   }
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
