deploy: 231b76c5f89179756b4ebb4b5d8db7b3f48c3150

--- a/_sources/week1/lecture.ipynb
+++ b/_sources/week1/lecture.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "291a4f98",
+   "id": "29906bba",
    "metadata": {},
    "source": [
     "# Lecture: Course Introduction\n",
@@ -13,6 +13,7 @@
     ":class: important\n",
     "- Understand the concept of Big Data and how it can be used in sustainability sciences\n",
     "- Know how this course is structured \n",
+    "- Understand the basics of machine learning \n",
     "- Gain a basic understanding of Python and Jupyter Notebooks\n",
     "`````\n",
     "\n",
