--- a/_sources/week3/lecture.ipynb
+++ b/_sources/week3/lecture.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0e2e52d8",
+   "id": "0861e0d5",
    "metadata": {},
    "source": [
-    "# Lecture: Introduction to Machine Learning\n",
+    "# Lecture: Introduction to Artificial Neural Networks\n",
     "\n",
     "This week we will focus on the basic concepts of machine learning and how we can develop a simply machine learning model.\n",
     "\n",
