--- a/week1/tutorial3.ipynb
+++ b/week1/tutorial3.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](../docs/banner.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Tutorial 3: Introduction to Data Analysis\n",
     "\n",
     "In this tutorial you will further learn on how to use Pandas, one of the most important python packages to be used within data sciences.\n",
@@ -9424,7 +9417,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('py310')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
