--- a/_sources/week2/lecture.ipynb
+++ b/_sources/week2/lecture.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ff85568a",
+   "id": "ceac3ed3",
    "metadata": {},
    "source": [
-    "# Lecture: Introduction to Data Analysis\n",
+    "# Lecture: Introduction to Random Forests\n",
     "\n",
     "This week we focus on the basics of data analysis and regression analysis. \n",
     "\n",
