--- a/_sources/week1/tutorial2.ipynb
+++ b/_sources/week1/tutorial2.ipynb
@@ -8039,7 +8039,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('py310')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
