--- a/week7/tutorial1.ipynb
+++ b/week7/tutorial1.ipynb
@@ -4,15 +4,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial: Visualising your results\n",
+    "# Tutorial 1: Data Exploration and regression analysis\n",
     "\n",
     "You can also create content with Jupyter Notebooks. This means that you can include\n",
-    "code blocks and their outputs in your book.\n",
+    "code blocks and their outputs in your book."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Tutorial Outline<span class=\"tocSkip\"></span></h2>\n",
+    "<hr>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\">\n",
+    "<li><span><a href=\"#1.-Introducing the packages\" data-toc-modified-id=\"1.-Introducing-the-packages-2\">1. Introducing the packages</a></span></li>\n",
+    "<li><span><a href=\"#2.-\" data-toc-modified-id=\"2.-Extracting-landuse-information-3\">2. </a></span></li>\n",
+    "<li><span><a href=\"#3.-\" data-toc-modified-id=\"3.-Visualize-Rasterize-4\">3. </a></span></li>\n",
+    "<li><span><a href=\"#4.-\" data-toc-modified-id=\"4.-Extracting-buildings-5\">4. </a></span></li>\n",
+    "<li><span><a href=\"#5.-\" data-toc-modified-id=\"5.-Analyze-buildings-6\">5. </a></span></li>\n",
+    "<li><span><a href=\"#6.-\" data-toc-modified-id=\"4.-Extracting-roads-5\">6. </a></span></li>\n",
+    "<li><span><a href=\"#7.-\" data-toc-modified-id=\"5.-Plot-routes-6\">7. </a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Learning Objectives\n",
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- .\n",
+    "- .\n",
+    "- .\n",
+    "- .\n",
+    "- .\n",
+    "- ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.Introducing the packages\n",
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Within this tutorial, we are going to make use of the following packages: \n",
     "\n",
-    "## Code blocks and outputs\n",
     "\n",
-    "Jupyter Book will also embed your code blocks and output in your book.\n",
-    "For example, here's some sample Matplotlib code:"
+    "\n",
+    "*We will first need to install these packages in the cell below. Uncomment them to make sure we can pip install them*"
    ]
   },
   {
@@ -64,7 +114,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -78,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
