--- a/week7/tutorial1.ipynb
+++ b/week7/tutorial1.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial 1: Data Exploration and regression analysis\n",
-    "\n",
-    "You can also create content with Jupyter Notebooks. This means that you can include\n",
-    "code blocks and their outputs in your book."
+    "# Tutorial: Visualizing your results"
    ]
   },
   {
