--- a/_sources/week6/tutorial2.ipynb
+++ b/_sources/week6/tutorial2.ipynb
@@ -6,7 +6,7 @@
     "tags": []
    },
    "source": [
-    "# Tutorial 2: Social Media & land aesthetics\n",
+    "# Tutorial 2: Social media & land aesthetics\n",
     "\n"
    ]
   },
